# FAST-MD-LAMMPS

./: LICENSE  README.md  pyproject.toml
samples/: NiSi2.data  NiSi2.in  README.txt  example.py  example_run.py  fd.pair  inv_gauss.pair  potfit_eopp.pair
src/: box_relax.py  check_center.py  find_centers.py  find_pairs.py  iso_add.py  iso_loop.py  main.py  progress_bar.py
src/fast_md/: check_center.py  create_vasp.py  fastmdtools.py  find_centers.py  iso_loop.py  manage_vasp.py  pot_check.py
